# thumbgrid

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  TODO.md  run.sh
plugins/player_mpv/: CMakeLists.txt
plugins/player_mpv/src/: mpvwidget.cpp  mpvwidget.h  videoplayer.h  videoplayermpv.cpp  videoplayermpv.h
qimgv/: CMakeLists.txt  (+8 more)
src/: CMakeLists.txt  appversion.cpp.in  appversion.h  core.cpp  core.h  macosapplication.h  main.cpp  proxystyle.h  resources.qrc  settings.cpp  settings.h  shortcutbuilder.cpp  shortcutpresetstore.cpp  shortcutpresetstore.h  themestore.cpp  themestore.h
src/components/: CMakeLists.txt  directorymodel.cpp  directorymodel.h  directorypresenter.cpp  directorypresenter.h  fileoperationscontroller.cpp  fileoperationscontroller.h
src/components/actionmanager/: actionmanager.cpp  actionmanager.h
src/components/cache/: cache.cpp  cache.h  cacheitem.cpp  cacheitem.h  thumbnailcache.cpp  thumbnailcache.h
src/components/directorymanager/: directorymanager.cpp  directorymanager.h
src/components/duplicatefinder/: duplicatefinder.cpp  duplicatefinder.h  duplicatematch.h  hashcache.cpp  hashcache.h  imagehasher.cpp  imagehasher.h
src/components/loader/: loader.cpp  loader.h  loaderrunnable.cpp  loaderrunnable.h
src/components/scaler/: scaler.cpp  scaler.h  scalerrequest.h  scalerrunnable.cpp  scalerrunnable.h
src/components/scriptmanager/: scriptmanager.cpp  scriptmanager.h
src/components/storeddata/: storeddataregistry.cpp  storeddataregistry.h
src/components/thumbnailer/: thumbnailer.cpp  thumbnailer.h  thumbnailerrunnable.cpp  thumbnailerrunnable.h
src/distrib/: thumbgrid.appdata.xml  thumbgrid.desktop  thumbgrid.icns
src/gui/: CMakeLists.txt  centralwidget.cpp  centralwidget.h  contextmenu.cpp  contextmenu.h  contextmenu.ui  flowlayout.cpp  idirectoryview.h  mainwindow.cpp  mainwindow.h
src/gui/customwidgets/: actionbutton.cpp  actionbutton.h  colorselectorbutton.cpp  colorselectorbutton.h  contextmenuitem.cpp  contextmenuitem.h  entryinfoitem.cpp  entryinfoitem.h  floatingwidget.h  iconbutton.h  iconwidget.cpp  iconwidget.h  menuitem.cpp  menuitem.h  overlaywidget.h  pathselectormenuitem.h  scriptrowwidget.cpp  scriptrowwidget.h  slidepanel.cpp  slidepanel.h  ssidebar.cpp  ssidebar.h  styledcombobox.cpp  thumbnailview.cpp  thumbnailview.h  thumbnailwidget.cpp  thumbnailwidget.h
src/gui/dialogs/: custommessagebox.cpp  custommessagebox.h  duplicatefinderdialog.cpp  duplicatefinderdialog.h  duplicateresultsmodel.cpp  duplicateresultsmodel.h  filereplacedialog.cpp  filereplacedialog.h  printdialog.cpp  printdialog.h  scripteditordialog.cpp  scripteditordialog.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  shortcutcreatordialog.cpp  shortcutcreatordialog.h  shortcutcreatordialog.ui
src/gui/folderview/: bookmarksitem.cpp  bookmarksitem.h  bookmarkswidget.cpp  bookmarkswidget.h  filesystemmodelcustom.cpp  foldergridview.cpp  foldergridview.h  folderview.cpp  folderview.h  folderviewproxy.cpp  folderviewproxy.h  fvoptionspopup.cpp  fvoptionspopup.h  fvoptionspopup.ui  gridcontextmenu.cpp  gridcontextmenu.h  treeviewcustom.cpp  treeviewcustom.h
src/gui/overlays/: changelogwindow.cpp  changelogwindow.h  clickzoneoverlay.h  copyoverlay.cpp  copyoverlay.h  cropoverlay.cpp  cropoverlay.h  floatingmessage.cpp  floatingmessage.h  floatingmessageproxy.cpp  fullscreeninfooverlay.cpp  fullscreeninfooverlay.h  fullscreeninfooverlayproxy.cpp  fullscreeninfooverlayproxy.h  imageinfooverlay.cpp  imageinfooverlay.h  imageinfooverlayproxy.h  renameoverlay.cpp  renameoverlay.h  videocontrols.cpp  videocontrols.h  videocontrols.ui  videocontrolsproxy.cpp  videocontrolsproxy.h
src/gui/viewers/: documentwidget.cpp  documentwidget.h  imageviewerv2.cpp  imageviewerv2.h  textsyntaxhighlighter.cpp  textsyntaxhighlighter.h  textviewer.cpp  textviewer.h  videoplayer.h  videoplayerinitproxy.cpp  videoplayerinitproxy.h  viewerwidget.cpp  viewerwidget.h
src/platform/: platformdesktop.h  platformdesktop_fallback.cpp  platformdesktop_freebsd.cpp  platformdesktop_linux.cpp  platformdesktop_macos.cpp  platformdesktop_windows.cpp
src/res/: default-shortcuts.json
src/res/keymaps/: keymap_fallback.json  keymap_linux.json  keymap_macos.json  keymap_windows.json
src/res/presets/: NOTICE.md  gwenview.json  irfanview.json  leftie.json  qimgv.json  xnviewmp.json
src/res/styles/: style-template.qss
src/res/themes/: black.ini  dark.ini  darkblue.ini  light.ini  light_blue.ini
src/res/translations/: de_DE.ts  es_ES.ts  fr_FR.ts  ja_JP.ts  tr_TR.ts  uk_UA.ts  zh_CN.ts
src/sourcecontainers/: CMakeLists.txt  documentinfo.cpp  documentinfo.h  fsentry.cpp  fsentry.h  image.cpp  image.h  imageanimated.cpp  imageanimated.h  imagestatic.cpp  imagestatic.h  textfile.cpp  textfile.h  thumbnail.cpp  thumbnail.h  video.cpp  video.h
src/tests/: CMakeLists.txt
src/tests/behavior/: test_a_script_can_be_bound_to_a_shortcut.cpp  test_a_shortcut_can_be_moved_between_contexts.cpp  test_convert_folder_selection.cpp  test_custom_theme_persistence.cpp  test_dir_thumbnails_are_cached_on_disk.cpp  test_document_view_transparency_grid.cpp  test_duplicate_finder_dialog.cpp  test_duplicate_finder_engine.cpp  test_duplicate_image_hashing.cpp  test_grid_context_menu_gating.cpp  test_grid_delete_selection.cpp  test_grid_inline_rename.cpp  test_grid_rename_selection.cpp  test_opening_a_folder_loads_its_thumbnails.cpp  test_opening_a_folder_shows_its_contents.cpp  test_opening_a_picture_shows_the_picture_view.cpp  test_other_file_types_toggle.cpp  test_preset_themes_load_from_files.cpp  (+11 more)
src/utils/: CMakeLists.txt  actions.cpp  actions.h  apppaths.cpp  apppaths.h  cmdoptionsrunner.cpp  cmdoptionsrunner.h  fileoperations.cpp  fileoperations.h  fileoperations_fallback.cpp  fileoperations_linux.cpp  fileoperations_platform.h  fileoperations_windows.cpp  imagefactory.cpp  imagefactory.h  imagelib.cpp  imagelib.h  inputmap.cpp  inputmap.h  logging.cpp  logging.h  pathstring.h  randomizer.cpp  safesave.cpp  safesave.h  script.cpp  stuff.cpp  stuff.h
(+140 files in other folders)
